--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -33,7 +33,7 @@
         <p>
             Graph 3D expects a data table with first three to five columns:
             colums <code>x</code>, <code>y</code>, <code>z</code> (optional),
-            <code>value</code>, <code>filtervalue</code> (optional).
+            <code>style</code>, <code>filter</code> (optional).
         </p>
 
         <table>
