Updated examples a little

--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -55,6 +55,7 @@
                     </div>
                 </td>
             </tr>
+          <!-- TODO: add JSON examples -->
         </table>
 
         <br>
