Added support for drawing legends to all graph types other than line and barsize. Added a "showLegend" option which can be used to toggle legend drawing Added legend drawing to 11_tooltips and to playground examples Added description of showLegend option to documentation

--- a/examples/graph3d/11_tooltips.html
+++ b/examples/graph3d/11_tooltips.html
@@ -48,6 +48,7 @@
         height: '600px',
         style: style,
         showPerspective: true,
+        showLegend: true,
         showGrid: true,
         showShadow: false,
 
