--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -113,6 +113,19 @@
                 <td><input type="checkbox" id="showGrid" checked /></td>
             </tr>
             <tr>
+                <td>showXAxis</td>
+                <td><input type="checkbox" id="showXAxis" checked /></td>
+            </tr>
+            <tr>
+                <td>showYAxis</td>
+                <td><input type="checkbox" id="showYAxis" checked /></td>
+            </tr>
+            <tr>
+                <td>showZAxis</td>
+                <td><input type="checkbox" id="showZAxis" checked /></td>
+            </tr>
+
+            <tr>
                 <td>showPerspective</td>
                 <td><input type="checkbox" id="showPerspective" checked /></td>
             </tr>
