--- a/examples/graph3d/rotateAxisLabels/rotateAxisLabels.html
+++ b/examples/graph3d/rotateAxisLabels/rotateAxisLabels.html
@@ -18,19 +18,23 @@ https://knoema.com/nwnfkne/world-gdp-ranking-2017-gdp-by-country-data-and-charts
 -->
   <title>WORLD INDEXES BY COUNTRY 2018 MID-YEAR</title>
   <style>
-    body {font: 10pt arial;}
+    body {
+      font: 10pt arial;
+    }
     div#info {
       width     : 500px;
       text-align: center;
       margin-top: 2em;
-      font-size : 1.2em; }
-    span#graphHead, span#updateTime, span#startTime, span#endTime{
+      font-size : 1.2em;
+    }
+    span#graphHead, span#updateTime, span#startTime, span#endTime {
       font: 10pt arial;
       font-weight: bold;
-      text-align: center; }
+      text-align: center;
+    }
   </style>
-<script type="text/javascript" src="vis.js.v4-21-0-rotateAxisLabels.js?'+Math.random()+'"></script>
-<script type="text/javascript">
+<script type="application/javascript" src="../../../dist/vis-graph3d.min.js"></script>
+<script type="application/javascript">
 var graph = null;
 
 function drawVisualization() {
