use rollup instead of gulp/webpack (#1)
* chore: remove no longer needed bower.json

* chore: do not use gulp for linting

* chore: use individual js files for examples

* chore: change from require to import

* chore: use vis.min.js for basic examples for testing

* feat: use rollup to generate individual libs

* chore: remove gulp and its dependencies

* chore: add vscode mocha debug config

* fix: fix tests

--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Graph 3D - Playground</title>
 
-    <script type="text/javascript" src="../../../dist/vis.js"></script>
+    <script type="text/javascript" src="../../../dist/vis-graph3d.min.js"></script>
 
     <script type="text/javascript" src="playground.js"></script>
     <script type="text/javascript" src="csv2array.js"></script>
