--- a/examples/graph3d/02_camera.html
+++ b/examples/graph3d/02_camera.html
@@ -8,7 +8,7 @@
     td {font: 10pt arial}
   </style>
 
-  <script type="text/javascript" src="../../dist/vis.js"></script>
+  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
