--- a/examples/graph3d/04_animation.html
+++ b/examples/graph3d/04_animation.html
@@ -9,7 +9,7 @@
     }
   </style>
 
-  <script type="text/javascript" src="../../dist/vis.js"></script>
+  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
