chore(examples): created example overview page; fixes #2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <ul>
         <li><a href="./docs/graph3d/index.html">Documentation</a></li>
-        <li><a href="./examples/graph3d/playground/index.html">Examples</a></li>
+        <li><a href="./examples/graph3d/index.html">Examples</a></li>
       </ul>
     </body>
 </html>
