chore(examples): generate index with screenshots
I don't want to install TS here just to make screenshots. I hope we'll
have dev-utils or some other way of sharing development utils soon so
that we can have auto generating in all of the packages.

--- a/examples/graph3d/02_camera.html
+++ b/examples/graph3d/02_camera.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D camera position</title>
+  <title>Graph 3D | Camera Position</title>
 
   <style>
     body {font: 10pt arial;}
