--- a/examples/graph3d/06_moving_dots.html
+++ b/examples/graph3d/06_moving_dots.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D animation moving dots</title>
+  <title>Graph 3D | Animation Moving Dots</title>
 
   <style>
     body {font: 10pt arial;}
