--- a/examples/graph3d/07_dot_cloud_colors.html
+++ b/examples/graph3d/07_dot_cloud_colors.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D cloud with colored dots</title>
+  <title>Graph 3D | Cloud with Colored Dots</title>
 
   <style>
     body {font: 10pt arial;}
