--- a/examples/graph3d/08_dot_cloud_size.html
+++ b/examples/graph3d/08_dot_cloud_size.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D cloud with sized dots</title>
+  <title>Graph 3D | Cloud with Sized Dots</title>
 
   <style>
     body {font: 10pt arial;}
