--- a/examples/graph3d/11_tooltips.html
+++ b/examples/graph3d/11_tooltips.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D tooltips</title>
+  <title>Graph 3D | Tooltips</title>
 
   <style>
     body {font: 10pt arial;}
