--- a/examples/graph3d/12_custom_labels.html
+++ b/examples/graph3d/12_custom_labels.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D Axis Ticks</title>
+  <title>Graph 3D | Custom Labels</title>
 
   <style>
     body {font: 10pt arial;}
