--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Graph 3D - Playground</title>
+    <title>Graph 3D | Playground</title>
 
     <script type="text/javascript" src="../../../dist/vis-graph3d.min.js"></script>
 
@@ -66,7 +66,7 @@
             <input type="button" value="Draw graph" onclick="draw();" id="draw">
         </p>
 
-        <div id="graph"></div>
+        <div id="mygraph"></div>
     </td>
 </tr>
 <tr>
