--- a/examples/graph3d/rotateAxisLabels/rotateAxisLabels.html
+++ b/examples/graph3d/rotateAxisLabels/rotateAxisLabels.html
@@ -16,7 +16,7 @@ https://en.wikipedia.org/wiki/Estimated_number_of_civilian_guns_per_capita_by_co
 https://en.wikipedia.org/wiki/List_of_countries_by_alcohol_consumption_per_capita
 https://knoema.com/nwnfkne/world-gdp-ranking-2017-gdp-by-country-data-and-charts
 -->
-  <title>WORLD INDEXES BY COUNTRY 2018 MID-YEAR</title>
+  <title>Graph 3D | WORLD INDEXES BY COUNTRY 2018 MID-YEAR</title>
   <style>
     body {
       font: 10pt arial;
