--- a/examples/graph3d/03_filter_data.html
+++ b/examples/graph3d/03_filter_data.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D demo</title>
+  <title>Graph 3D | Filter Data</title>
 
   <style>
     body {font: 10pt arial;}
