--- a/examples/graph3d/04_animation.html
+++ b/examples/graph3d/04_animation.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D animation demo</title>
+  <title>Graph 3D | Animation</title>
 
   <style type="text/css">
     body {
