--- a/examples/graph3d/05_line.html
+++ b/examples/graph3d/05_line.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D line demo</title>
+  <title>Graph 3D | Line</title>
 
   <style>
     body {font: 10pt arial;}
