--- a/examples/graph3d/15_styling_per_point.html
+++ b/examples/graph3d/15_styling_per_point.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Graph 3D styles</title>
+  <title>Graph 3D | Styling per Point</title>
 
   <style>
     body {font: 10pt arial;}
