chore(examples): update

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Graph 3D Examples</title>
+    <title>Vis Graph3D Examples</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -254,7 +254,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/04_animation.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/44b2da471c68f49cb41dc0690487d082929fbb022a888327d2b1a035e0c36c66.png"
+                  src="thumbnails/44b2da471c68f49cb41dc0690487d082929fbb022a888327d2b1a035e0c36c66.png"
                   alt="Animation"
                 /></div></a></span
           ><span class="example-link"
@@ -476,7 +476,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/06_moving_dots.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/7ce1dc306703919a19090e8f70fc8a7ef0d161412f936d705442ef38aca3ce3a.png"
+                  src="thumbnails/7ce1dc306703919a19090e8f70fc8a7ef0d161412f936d705442ef38aca3ce3a.png"
                   alt="Animation Moving Dots"
                 /></div></a></span
           ><span class="example-link"
@@ -640,7 +640,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/01_basics.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/a2093f3aab17f34ce73003b929d4508870f32390487c6befe784394ef93e5479.png"
+                  src="thumbnails/a2093f3aab17f34ce73003b929d4508870f32390487c6befe784394ef93e5479.png"
                   alt="Basics"
                 /></div></a></span
           ><span class="example-link"
@@ -922,7 +922,7 @@ td {
             <a href="graph3d/02_camera.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/e67f2e28c3dc1af39bc23e96b7ea0bbc5b632ede8d58793884ce4f3f242dd733.png"
+                  src="thumbnails/e67f2e28c3dc1af39bc23e96b7ea0bbc5b632ede8d58793884ce4f3f242dd733.png"
                   alt="Camera Position"
                 /></div></a></span
           ><span class="example-link"
@@ -1111,7 +1111,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/07_dot_cloud_colors.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/25be5ead5cd783a8a644a4af642714aab8e429a7a0bb08222f637c37f52336d5.png"
+                  src="thumbnails/25be5ead5cd783a8a644a4af642714aab8e429a7a0bb08222f637c37f52336d5.png"
                   alt="Cloud with Colored Dots"
                 /></div></a></span
           ><span class="example-link"
@@ -1295,7 +1295,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/08_dot_cloud_size.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/5a02efacddb0331827ddcf2ae12052f3720c21a7506374c724150cecef901e84.png"
+                  src="thumbnails/5a02efacddb0331827ddcf2ae12052f3720c21a7506374c724150cecef901e84.png"
                   alt="Cloud with Sized Dots"
                 /></div></a></span
           ><span class="example-link"
@@ -1575,7 +1575,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/12_custom_labels.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/f7c986763a1b0d76c35e782613d4c2255682de3477eac7ade789091dc243bc17.png"
+                  src="thumbnails/f7c986763a1b0d76c35e782613d4c2255682de3477eac7ade789091dc243bc17.png"
                   alt="Custom Labels"
                 /></div></a></span
           ><span class="example-link"
@@ -1741,7 +1741,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/13_disable_zoom.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/ca22cb74e9f0c43b4a07bac1b0389e3e16082cfd3c6589d87bd7492c2107bcb6.png"
+                  src="thumbnails/ca22cb74e9f0c43b4a07bac1b0389e3e16082cfd3c6589d87bd7492c2107bcb6.png"
                   alt="Disable Zoom"
                 /></div></a></span
           ><span class="example-link"
@@ -1907,7 +1907,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/03_filter_data.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/2fa5fd611006cb869a8a54e40a30bb3258eb46541b3530aaf0757dcc15513a18.png"
+                  src="thumbnails/2fa5fd611006cb869a8a54e40a30bb3258eb46541b3530aaf0757dcc15513a18.png"
                   alt="Filter Data"
                 /></div></a></span
           ><span class="example-link"
@@ -2069,7 +2069,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/05_line.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/f5e35d3448f335732af70475c293466677d5806da60c96df9173da7312dcfcff.png"
+                  src="thumbnails/f5e35d3448f335732af70475c293466677d5806da60c96df9173da7312dcfcff.png"
                   alt="Line"
                 /></div></a></span
           ><span class="example-link"
@@ -2263,7 +2263,7 @@ body {
             <a href="graph3d/09_mobile.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/4fb6e1185e7f4ae7392babb7ce8c11b5b6baaeb839ef9f9a655f309dde4b234a.png"
+                  src="thumbnails/4fb6e1185e7f4ae7392babb7ce8c11b5b6baaeb839ef9f9a655f309dde4b234a.png"
                   alt="Mobile"
                 /></div></a></span
           ><span class="example-link"
@@ -2909,7 +2909,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/playground/index.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/abd84ceb6894a84b569ea940d4831358492f11253c022f11e43b1014a7992ddf.png"
+                  src="thumbnails/abd84ceb6894a84b569ea940d4831358492f11253c022f11e43b1014a7992ddf.png"
                   alt="Playground"
                 /></div></a></span
           ><span class="example-link"
@@ -3205,7 +3205,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/10_styling.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/5692720dbea5649cf26f16fdee0735e311e3f2eaa6af7c9404b3a1fdb906fbe3.png"
+                  src="thumbnails/5692720dbea5649cf26f16fdee0735e311e3f2eaa6af7c9404b3a1fdb906fbe3.png"
                   alt="Styling"
                 /></div></a></span
           ><span class="example-link"
@@ -3517,7 +3517,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/15_styling_per_point.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/c83e4c80b92f79205c976318a5d1f7be8b08dd8f68c242177458bbacc2f3465c.png"
+                  src="thumbnails/c83e4c80b92f79205c976318a5d1f7be8b08dd8f68c242177458bbacc2f3465c.png"
                   alt="Styling per Point"
                 /></div></a></span
           ><span class="example-link"
@@ -3843,7 +3843,7 @@ div#info {
             <a href="graph3d/11_tooltips.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/c053a6307bb0b5efafd118ab07192cd5d3bf6c6b6bbc742d10d8eda2d7bb04e7.png"
+                  src="thumbnails/c053a6307bb0b5efafd118ab07192cd5d3bf6c6b6bbc742d10d8eda2d7bb04e7.png"
                   alt="Tooltips"
                 /></div></a></span
           ><span class="example-link"
@@ -4248,7 +4248,7 @@ span#endTime {
             <a href="graph3d/rotateAxisLabels/rotateAxisLabels.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/0b719c793c5a7360ba565c3d9448a308fe2f150e90aee742099ab867df5c2e23.png"
+                  src="thumbnails/0b719c793c5a7360ba565c3d9448a308fe2f150e90aee742099ab867df5c2e23.png"
                   alt="WORLD INDEXES BY COUNTRY 2018 MID-YEAR"
                 /></div></a></span
           ><span class="example-link"
@@ -4414,7 +4414,7 @@ window.addEventListener("load", () =&gt; {
             <a href="graph3d/14_zoom_ctrl_scroll.html"
               ><div class="example-image">
                 <img
-                  src="./thumbnails/9d3da0f15b9ed2d99a43702eab6e272430988bf6f5b634baeed4a4232208502a.png"
+                  src="thumbnails/9d3da0f15b9ed2d99a43702eab6e272430988bf6f5b634baeed4a4232208502a.png"
                   alt="Zoom CTRL Scroll"
                 /></div></a
           ></span>
