--- a/examples/graph3d/16_styling_surface.html
+++ b/examples/graph3d/16_styling_surface.html
@@ -5,6 +5,18 @@
 
   <style>
     body {font: 10pt arial;}
+
+    fieldset {
+      width: fit-content;
+    }
+
+    fieldset > div {
+      float: left;
+    }
+
+    fieldset > div+div {
+      margin-left: 100px;
+    }
   </style>
 
   <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
@@ -19,7 +31,14 @@
 
     // Called when the Visualization API is loaded.
     function drawVisualization() {
-      var style = document.getElementById('style').value;
+      var radioButtons = document.getElementsByName('style');
+      var selectedRadio = null;
+      radioButtons.forEach(function(radioButton) {
+        if(radioButton.checked === true){
+          selectedRadio = radioButton;
+        }
+      });
+      const style = (selectedRadio && selectedRadio.value) || null;
 
       // Create and populate a data table.
       data = new vis.DataSet();
@@ -68,25 +87,76 @@
       // Instantiate our graph object.
       var container = document.getElementById('mygraph');
       graph = new vis.Graph3d(container, data, options);
-
-      document.getElementById('style').onchange = drawVisualization;
     }
   </script>
   
 </head>
 
 <body onload="drawVisualization();">
-<p>
-  <label for="style"> Style:
-    <select id="style">
-      <option value="default">Default</option>
-      <option value="hue">Hue</option>
-      <option value="html">HTML Hex</option>
-    </select>
-  </label>
-</p>
-<div id="mygraph"></div>
+  <fieldset>
+    <legend>Select Style</legend>
+    <div>
+      <input 
+        type="radio"
+        name="style"
+        id="defaultStyle"
+        value="default"
+        checked="checked"
+        onchange="drawVisualization();"
+      />
+      <label for="defaultStyle">Default Configuration: </label>
+      <code>
+        <pre>surfaceColors: [
+  '#FF0000',
+  '#FFF000',
+  '#00FF00',
+  '#68E8FB',
+  '#000FFF',
+]</pre>
+      </code>
+    </div>
 
-<div id="info"></div>
+    <div>
+      <input 
+        type="radio"
+        name="style"
+        id="hueStyle"
+        value="hue"
+        onchange="drawVisualization();"
+      />
+      <label for="hueStyle">Hue Configuration:</label>
+      <code>
+        <pre>surfaceColors: {
+  hue: {
+    start: 40,
+    end: 180,
+    saturation: 50,
+    brightness: 100,
+    colorStops: 8,
+  }
+}</pre>
+      </code>
+    </div>
+
+    <div>
+      <input 
+        type="radio"
+        name="style"
+        id="htmlStyle"
+        value="html"
+        onchange="drawVisualization();"
+      />
+      <label for="htmlStyle">HTML Hex Configuration:</label>
+      <code>
+        <pre>surfaceColors: [
+  '#FFFFFF',
+  '#6A0DAD',
+  '#000000',
+]</pre>
+      </code>
+    </div>
+  </fieldset>
+
+<div id="mygraph"></div>
 </body>
 </html>
