feat(build): use common build process
https://github.com/visjs/vis-util/pull/144

--- a/examples/graph3d/08_dot_cloud_size.html
+++ b/examples/graph3d/08_dot_cloud_size.html
@@ -6,7 +6,7 @@
   <style>
     body {font: 10pt arial;}
   </style>
-  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
+  <script type="text/javascript" src="../../standalone/umd/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
