--- a/examples/graph3d/09_mobile.html
+++ b/examples/graph3d/09_mobile.html
@@ -22,7 +22,7 @@
   <!-- for mobile devices like android and iphone -->
   <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width" />
 
-  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
+  <script type="text/javascript" src="../../standalone/umd/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
