--- a/examples/graph3d/11_tooltips.html
+++ b/examples/graph3d/11_tooltips.html
@@ -13,7 +13,7 @@
     }
   </style>
 
-  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
+  <script type="text/javascript" src="../../standalone/umd/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
