--- a/examples/graph3d/12_custom_labels.html
+++ b/examples/graph3d/12_custom_labels.html
@@ -7,7 +7,8 @@
     body {font: 10pt arial;}
   </style>
 
-  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/moment@2.24.0/moment.js"></script>
+  <script type="text/javascript" src="../../standalone/umd/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
@@ -59,7 +60,7 @@
         },
         
         xValueLabel: function(value) {
-            return vis.moment().add(value, 'days').format('DD MMM');
+            return moment().add(value, 'days').format('DD MMM');
         },
         
         yValueLabel: function(value) {
