--- a/examples/graph3d/rotateAxisLabels/rotateAxisLabels.html
+++ b/examples/graph3d/rotateAxisLabels/rotateAxisLabels.html
@@ -33,7 +33,7 @@ https://knoema.com/nwnfkne/world-gdp-ranking-2017-gdp-by-country-data-and-charts
       text-align: center;
     }
   </style>
-<script type="application/javascript" src="../../../dist/vis-graph3d.min.js"></script>
+<script type="application/javascript" src="../../../standalone/umd/vis-graph3d.min.js"></script>
 <script type="application/javascript">
 var graph = null;
 
