--- a/examples/graph3d/13_disable_zoom.html
+++ b/examples/graph3d/13_disable_zoom.html
@@ -7,7 +7,7 @@
     body {font: 10pt arial;}
   </style>
 
-  <script type="text/javascript" src="../../dist/vis-graph3d.min.js"></script>
+  <script type="text/javascript" src="../../standalone/umd/vis-graph3d.min.js"></script>
 
   <script type="text/javascript">
     var data = null;
