Add missing example links

--- a/examples/graph3d/index.html
+++ b/examples/graph3d/index.html
@@ -11,7 +11,7 @@
 	<div class="contentWrapper">
 		<div id="contentContainer">
 				<h1>Grpah3D Examples</h1>
-				
+
 				<a class="btn btn-primary" href="../../docs/" role="button">View docs »</a><br>
 				<a class='exampleLink' href="playground/index.html">interactive playground »</a><br>
 
@@ -29,6 +29,11 @@
 					<li><a class='exampleLink' href="10_styling.html">styling</a></li>
 					<li><a class='exampleLink' href="11_tooltips.html">tooltips</a></li>
 					<li><a class='exampleLink' href="12_custom_labels.html">custom_labels</a></li>
+					<li><a class='exampleLink' href="13_disable_zoom.html">disable zoom</a></li>
+					<li><a class='exampleLink' href="14_zoom_ctrl_scroll.html">zoom ctrl scroll</a></li>
+					<li><a class='exampleLink' href="15_styling_per_point.html">styling per point</a></li>
+					<li><a class='exampleLink' href="16_styling_surface.html">styling surface</a></li>
+					<li><a class='exampleLink' href="17_surface_value.html">surface value</a></li>
 				</ul>
 
 				<h3>Extended examples</h3>
