Add option 'showSurfaceGrid'
This fixes the following unexpected/inconsistent behaviours:

- if surfaceColors was active (which was basically *always*, before this
  PR), the style for grid lines was dependent on what was drawn before
  (which was usually an axis or legend, and therefore basically always
  defaulted to axisColor), because strokeStyle was never explicitly set
  in this `if` branch.

- if surfaceColors was inactive (for which a user would have had to
  manually set `graph.surfaceColors = undefined`) it was dependent on
  the value of the showShadow option , which is IMO also not a good
  choice

Again, I make new possibility to disable surface grid visible in the
"styling surface" example, because I believe it fits there the most, and
it should be visible at least one of the examples.

--- a/examples/graph3d/16_styling_surface.html
+++ b/examples/graph3d/16_styling_surface.html
@@ -64,7 +64,8 @@
           showPerspective: true,
           showGrayBottom: true,
           showGrid: true,
-          showShadow: false,
+          showShadow: true,
+          showSurfaceGrid: false,
           keepAspectRatio: true,
           verticalRatio: 0.5
         };
