--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -141,6 +141,10 @@
                 <td>showShadow</td>
                 <td><input type="checkbox" id="showShadow" /></td>
             </tr>
+            <tr>
+                <td>showSurfaceGrid</td>
+                <td><input type="checkbox" id="showSurfaceGrid" checked /></td>
+            </tr>
 
             <tr>
                 <td>keepAspectRatio</td>
