--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -109,6 +109,10 @@
                 <td><input type="checkbox" id="showAnimationControls" checked /></td>
             </tr>
             <tr>
+                <td>showGrayBottom</td>
+                <td><input type="checkbox" id="showGrayBottom" /></td>
+            </tr>
+            <tr>
                 <td>showGrid</td>
                 <td><input type="checkbox" id="showGrid" checked /></td>
             </tr>
