fix: several issues with surface plots: surfaceColors, shadow (#123)
* Bugfix: make surfaceColors optional for SURFACE plots

Without this there was actually no proper way to let the user specify
that surfaceColors should not be used (other than setting
`graph.surfaceColors = undefined` manually after construction), which
means the `else { ... }` branch of the corresponding check in
_redrawSurfaceGraphPoint was effectively dead code:

- if called with `options.surfaceColors = undefined`, the default
  DEFAULTS.surfaceColors value was used

- the `if (colors && colors.length !== 0)` check in
  _redrawSurfaceGraphPoint makes it look as it was avoidable by
  specifying an empty array, however throws an error in
  Settings.setSurfaceColor.

* Improve lighting calculation

The previous behaviour looked incomprehensible to me. Now it scales by
how much the surface is oriented toward the viewer, and makes the bottom
of the surface darker. This corresponds to diffuse lighting with light
shining in the view direction.

Alternatively, we could:

- make no distinction between bottom and top:
  v = Math.abs(crossproduct.z / crossproduct.length())

- use a more standard lighting model (e.g. diffuse/specular/phong)
  as described here: https://learnopengl.com/Lighting/Basic-Lighting

- let the user provide a function (normal vector -> lighting value) in
  the showShadow option

Note that shadow for surface plots was probably not used by many users,
because before this PR this did require manually unsetting
graph.surfaceColors after graph initialization.

* Fix a bug with top/bottom side calculation + showPerspective

The criterion that distinguishes whether we are viewing the top or
bottom of a surface is the angle between surface normal and **view
direction**, which in case of the perspective projection is not the
Z-axis but the location of the fragment relative to the camera.

* Make showShadow work in combination with surfaceColors

--- a/examples/graph3d/playground/index.html
+++ b/examples/graph3d/playground/index.html
@@ -109,6 +109,10 @@
                 <td><input type="checkbox" id="showAnimationControls" checked /></td>
             </tr>
             <tr>
+                <td>showGrayBottom</td>
+                <td><input type="checkbox" id="showGrayBottom" /></td>
+            </tr>
+            <tr>
                 <td>showGrid</td>
                 <td><input type="checkbox" id="showGrid" checked /></td>
             </tr>
@@ -136,6 +140,10 @@
             <tr>
                 <td>showShadow</td>
                 <td><input type="checkbox" id="showShadow" /></td>
+            </tr>
+            <tr>
+                <td>showSurfaceGrid</td>
+                <td><input type="checkbox" id="showSurfaceGrid" checked /></td>
             </tr>
 
             <tr>
