--- a/examples/graph3d/16_styling_surface.html
+++ b/examples/graph3d/16_styling_surface.html
@@ -62,8 +62,10 @@
           height: "600px",
           style: "surface",
           showPerspective: true,
+          showGrayBottom: true,
           showGrid: true,
-          showShadow: false,
+          showShadow: true,
+          showSurfaceGrid: false,
           keepAspectRatio: true,
           verticalRatio: 0.5
         };
