--- a/examples/graph3d/16_styling_surface.html
+++ b/examples/graph3d/16_styling_surface.html
@@ -70,18 +70,30 @@
           verticalRatio: 0.5
         };
 
-        if (style === "hue") {
-          options.surfaceColors = {
+        if (style === "default") {
+          options.colormap = [
+            '#000FFF',
+            '#68E8FB',
+            '#00FF00',
+            '#FFF000',
+            '#FF0000',
+          ];
+        } else if (style === "function") {
+          options.colormap = function(x) {
+            return {r: 255*x, g: 0, b: 0, a: (1+x)/2};
+          };
+        } else if (style === "hue") {
+          options.colormap = {
             hue: {
-              start: -360,
-              end: 360,
+              start: 360,
+              end: -360,
               saturation: 50,
               brightness: 100,
               colorStops: 8 // How many colour gradients do we want
             }
           };
         } else if (style === "html") {
-          options.surfaceColors = ["#FFFFFF", "#6A0DAD", "#000000"];
+          options.colormap = ["#000000", "#6A0DAD", "#FFFFFF"];
         } // else use defaults.
 
         // Instantiate our graph object.
@@ -105,13 +117,29 @@
         />
         <label for="defaultStyle">Default Configuration: </label>
         <code>
-          <pre>surfaceColors: [
-  '#FF0000',
-  '#FFF000',
-  '#00FF00',
-  '#68E8FB',
+          <pre>colormap: [
   '#000FFF',
+  '#68E8FB',
+  '#00FF00',
+  '#FFF000',
+  '#FF0000',
 ]</pre>
+        </code>
+      </div>
+
+      <div>
+        <input
+          type="radio"
+          name="style"
+          id="functionStyle"
+          value="function"
+          onchange="drawVisualization();"
+        />
+        <label for="functionStyle">Function Configuration:</label>
+        <code>
+          <pre>colormap: function(x) {
+  return {r: 255*x, g: 0, b: 0, a: (1+x)/2};
+}</pre>
         </code>
       </div>
 
@@ -125,10 +153,10 @@
         />
         <label for="hueStyle">Hue Configuration:</label>
         <code>
-          <pre>surfaceColors: {
+          <pre>colormap: {
   hue: {
-    start: -360,
-    end: 360,
+    start: 360,
+    end: -360,
     saturation: 50,
     brightness: 100,
     colorStops: 8,
@@ -147,10 +175,10 @@
         />
         <label for="htmlStyle">HTML Hex Configuration:</label>
         <code>
-          <pre>surfaceColors: [
-  '#FFFFFF',
-  '#6A0DAD',
+          <pre>colormap: [
   '#000000',
+  '#6A0DAD',
+  '#FFFFFF',
 ]</pre>
         </code>
       </div>
